<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/backup">

        <Preference
                app:key="create_local_backup"
                app:title="@string/create_local_backup"
                app:summary="@string/backup_summary"
                app:icon="@drawable/ic_folder_copy_24" />
        <Preference
                app:key="create_external_backup"
                app:title="@string/create_external_backup"
                app:summary="@string/backup_summary"
                app:icon="@drawable/ic_backup_24" />

        <Preference
                app:key="restore_backup"
                android:title="@string/restore_local_backup"
                app:summary="@string/restore_backup_summary"
                app:icon="@drawable/ic_settings_backup_restore_24"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/contact">
        <Preference
            app:key="contact_developer"
                app:title="@string/contact_developer"
                app:summary="@string/contact_developer_summary"
                app:icon="@drawable/ic_send_24"/>
    </PreferenceCategory>

</PreferenceScreen>