<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/view_notes"
        android:icon="@drawable/ic_speaker_notes_24"
        android:title="@string/notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/edit_vehicle"
        android:icon="@drawable/ic_edit_24"
        android:title="@string/edit_vehicle"
        app:showAsAction="never" />

    <item
            android:id="@+id/export_csv"
            android:icon="@drawable/ic_export_csv_24"
            android:title="@string/export_csv"
            app:showAsAction="never"/>

    <item
            android:id="@+id/import_csv"
            android:icon="@drawable/ic_import_csv_24"
            android:title="@string/import_csv"
            app:showAsAction="never"/>

    <item
            android:id="@+id/clear_mileages"
            android:icon="@drawable/ic_delete_sweep_24"
            android:title="@string/clear_mileages"
            app:showAsAction="never"/>

    <item
        android:id="@+id/delete_vehicle"
        android:icon="@drawable/ic_delete_forever_24"
        android:title="@string/delete_vehicle"
        app:showAsAction="never"/>
</menu>