<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".AddVehicleFragment"
        android:id="@+id/add_vehicle_layout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plate_label"
            android:id="@+id/plate_label_text_view"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/plate_edit_text" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/plate_hint"
            android:ems="10"
            android:id="@+id/plate_edit_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/maker_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/maker_edit_text" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/maker_hint"
            android:ems="10"
            android:id="@+id/maker_edit_text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/plate_edit_text"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="48dp" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/model_hint"
            android:ems="10"
            android:id="@+id/model_edit_text"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/maker_edit_text"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="48dp" />

    <TextView
            android:text="@string/model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/model_edit_text" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="104dp"
            android:id="@+id/guideline3" />

    <Button
            android:text="@string/add_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_vehicle_button"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/model_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>