<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddMileageFragment">

    <TextView
            android:text="@string/kilometres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/kilometres_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            android:layout_marginEnd="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <TextView
            android:text="@string/litres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/litres_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/kilometres_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            android:layout_marginEnd="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <TextView
            android:text="@string/mileage_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mileage_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/litres_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:labelFor="@id/mileage_result_edit_text"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            android:layout_marginEnd="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <TextView
            android:text="@string/notes_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notes_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:labelFor="@id/mileage_result_edit_text"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/mileage_label"
            app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
            android:layout_marginEnd="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <Button
            android:text="@string/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            android:id="@+id/save_mileage_button"
            android:layout_marginEnd="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/add_mileage_title" />

    <TextView
            android:text="@string/mileage_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView19"
            android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/mileage_result_edit_text" />

    <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_vertical"
            app:layout_constraintGuide_begin="116dp"
            android:orientation="vertical" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/kilometers_hint"
            android:ems="8"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/kilometres_label"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            android:id="@+id/kilometres_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/litres_hint"
            android:ems="8"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/litres_label"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            android:id="@+id/litres_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:id="@+id/mileage_result_edit_text"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/mileage_label"
            android:enabled="false"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            app:layout_constraintEnd_toStartOf="@+id/textView19"
            android:layout_marginEnd="8dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <TextView
            android:text="@string/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:labelFor="@id/date_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/add_mileage_title"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/date_edit_text"
            android:layout_marginEnd="4dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:cursorVisible="false"
            android:clickable="true"
            android:focusable="false"
            android:ems="8"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            android:minHeight="48dp"
            tools:ignore="KeyboardInaccessibleWidget,TextFields"
            android:importantForAutofill="no"
            android:id="@+id/date_edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="12"
            android:id="@+id/notes_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/notes_label"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
            android:layout_marginStart="8dp"
            android:lines="2"
            android:minLines="2"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:gravity="start|top"
            android:hint="@string/notes_hint"
            android:importantForAutofill="no"
            app:layout_goneMarginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="0"/>

    <TextView
        android:id="@+id/add_mileage_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_mileage"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>