<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View
            android:layout_width="24dp"
            android:layout_height="64dp"
            android:id="@+id/header"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" />

    <TextView
            android:text="@string/mileage_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintBottom_toBottomOf="@+id/header"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
            tools:text="7,24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/header"
            app:layout_constraintTop_toTopOf="@+id/header" />

    <View
            android:layout_width="2dp"
            android:layout_height="64dp"
            android:id="@+id/view2"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
            android:text="@string/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/view2"
            android:layout_marginStart="16dp"
            android:textStyle="bold" />

    <TextView
            tools:text="16/12/2021"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/view2"
            android:layout_marginStart="16dp" />

    <TextView
            tools:text="Notes of the mileage are shown here..."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintBottom_toBottomOf="@+id/view2" />

    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="229dp"
            android:id="@+id/guideline2" />

    <TextView
            android:text="@string/kilometres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            android:textStyle="bold" />

    <TextView
            tools:text="724,65"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6" />

    <TextView
            android:text="@string/litres_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold" />

    <TextView
            tools:text="61,74"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>